[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/scripts/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Planet-Joy.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/audio/GunShot.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=7]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.470588 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.686275 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="optionsMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.482353, 0.34902, 0.529412, 1 )

[node name="Label" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -336.0
margin_top = 144.0
margin_right = 345.0
margin_bottom = 242.0
custom_fonts/font = SubResource( 7 )
text = "Options Menu"

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -264.0
margin_top = -124.0
margin_right = 272.0
margin_bottom = 31.0
custom_constants/separation = 50

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/HBoxContainer"]
margin_right = 226.0
margin_bottom = 155.0

[node name="Master" type="Label" parent="ColorRect/HBoxContainer/VBoxContainer"]
margin_right = 226.0
margin_bottom = 49.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 8 )
text = "Master"

[node name="Music" type="Label" parent="ColorRect/HBoxContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 226.0
margin_bottom = 102.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 8 )
text = "Music"

[node name="Sound FX" type="Label" parent="ColorRect/HBoxContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 226.0
margin_bottom = 155.0
custom_fonts/font = SubResource( 8 )
text = "Sound FX"

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect/HBoxContainer"]
margin_left = 276.0
margin_right = 536.0
margin_bottom = 155.0
size_flags_horizontal = 3

[node name="Master" type="HSlider" parent="ColorRect/HBoxContainer/VBoxContainer2"]
margin_right = 260.0
margin_bottom = 49.0
rect_min_size = Vector2( 10, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -60.0
max_value = 0.0

[node name="Music" type="HSlider" parent="ColorRect/HBoxContainer/VBoxContainer2"]
margin_top = 53.0
margin_right = 260.0
margin_bottom = 102.0
rect_min_size = Vector2( 10, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -60.0
max_value = 0.0

[node name="Sound FX" type="HSlider" parent="ColorRect/HBoxContainer/VBoxContainer2"]
margin_top = 106.0
margin_right = 260.0
margin_bottom = 155.0
rect_min_size = Vector2( 10, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -60.0
max_value = 0.0

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect"]
margin_left = 696.0
margin_top = 608.0
margin_right = 1115.0
margin_bottom = 657.0
custom_constants/separation = 115

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/HBoxContainer2"]
margin_right = 280.0
margin_bottom = 49.0

[node name="FullScreen" type="Label" parent="ColorRect/HBoxContainer2/VBoxContainer"]
margin_right = 280.0
margin_bottom = 49.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 9 )
text = "Full Screen"

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect/HBoxContainer2"]
margin_left = 395.0
margin_right = 471.0
margin_bottom = 49.0

[node name="FullScreenCheckBox" type="CheckBox" parent="ColorRect/HBoxContainer2/VBoxContainer2"]
visible = false
margin_right = 76.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FullScreenCheckBox2" type="CheckButton" parent="ColorRect/HBoxContainer2/VBoxContainer2"]
margin_right = 76.0
margin_bottom = 40.0

[node name="backButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 832.0
margin_top = 856.0
margin_right = 1088.0
margin_bottom = 944.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Back"

[node name="GunShot" parent="." instance=ExtResource( 3 )]

[connection signal="value_changed" from="ColorRect/HBoxContainer/VBoxContainer2/Master" to="." method="_on_Master_value_changed"]
[connection signal="value_changed" from="ColorRect/HBoxContainer/VBoxContainer2/Music" to="." method="_on_Music_value_changed"]
[connection signal="drag_ended" from="ColorRect/HBoxContainer/VBoxContainer2/Sound FX" to="." method="_on_Sound_FX_drag_ended"]
[connection signal="value_changed" from="ColorRect/HBoxContainer/VBoxContainer2/Sound FX" to="." method="_on_Sound_FX_value_changed"]
[connection signal="pressed" from="ColorRect/HBoxContainer2/VBoxContainer2/FullScreenCheckBox" to="." method="_on_FullScreenCheckBox_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer2/VBoxContainer2/FullScreenCheckBox2" to="." method="_on_FullScreenCheckBox2_pressed"]
[connection signal="pressed" from="backButton" to="." method="_on_backButton_pressed"]
